// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUser: validate when email has invalid format 1`] = `
Object {
  "email": "Please enter a valid email address",
}
`;

exports[`CreateUser: validate with empty values 1`] = `
Object {
  "email": "Please enter a email address",
}
`;

exports[`CreateUser: validate with values 1`] = `Object {}`;
